--- a/bower.json
+++ b/bower.json
@@ -7,8 +7,10 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-      "jquery": "~1.10.2",
-      "toastr": "~2.1.2"
+    "jquery": "~1.10.2",
+    "toastr": "~2.1.2",
+    "underscore": "~1.8.3",
+    "angular-google-maps": "~2.3.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
