--- a/bower.json
+++ b/bower.json
@@ -10,10 +10,14 @@
     "jquery": "~1.10.2",
     "toastr": "~2.1.2",
     "underscore": "~1.8.3",
-    "angular-google-maps": "~2.3.2"
+    "angular-google-maps": "~2.3.2",
+    "angular-odometer": "~0.0.10",
+    "ng-dialog": "~0.6.0"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.0"
+    "angular-mocks": "^1.4.0",
+    "angular-odometer": "~0.0.10",
+    "ng-dialog": "~0.6.0"
   },
   "appPath": "app",
   "moduleName": "collegeApp",
