--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "underscore": "~1.8.3",
     "angular-google-maps": "~2.3.2",
     "angular-odometer": "~0.0.10",
-    "ng-dialog": "~0.6.0"
+    "ng-dialog": "~0.6.0",
+    "angular-smart-table": "^2.1.8"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0",
