--- a/package.json
+++ b/package.json
@@ -3,51 +3,70 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "autoprefixer-core": "^5.2.1",
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "~0.4.0",
-    "grunt-angular-templates": "^0.5.7",
-    "grunt-concurrent": "^1.0.0",
-    "grunt-contrib-clean": "^0.6.0",
-      "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-cssmin": "^0.12.0",
-    "grunt-contrib-htmlmin": "^0.4.0",
+    "autoprefixer-core": "^6.0.1",
+    "grunt": "^1.0.1",
+    "grunt-angular-templates": "^1.1.0",
+    "grunt-autoprefixer": "^3.0.4",
+    "grunt-concurrent": "^2.3.1",
+    "grunt-contrib-clean": "*",
+    "grunt-contrib-coffee": "~1.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^1.0.2",
+    "grunt-contrib-htmlmin": "^2.0.0",
     "grunt-contrib-imagemin": "^1.0.0",
-    "grunt-contrib-jshint": "^0.11.0",
-    "grunt-contrib-uglify": "^0.7.0",
-    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-filerev": "^2.1.2",
     "grunt-google-cdn": "^0.4.3",
-    "grunt-jscs": "^1.8.0",
-    "grunt-karma": "^0.12.2",
-    "grunt-newer": "^1.1.0",
-    "grunt-ng-annotate": "^0.9.2",
-    "grunt-postcss": "^0.5.5",
-    "grunt-svgmin": "^2.0.0",
+    "grunt-html-snapshot": "~0.6.1",
+    "grunt-html-snapshots": "~0.10.1",
+    "grunt-jscs": "^3.0.1",
+    "grunt-karma": "^2.0.0",
+    "grunt-newer": "^1.2.0",
+    "grunt-ng-annotate": "^3.0.0",
+    "grunt-postcss": "^0.8.0",
+    "grunt-s3": "~0.2.0-alpha.3",
+    "grunt-sitemap": "~1.2.0",
+    "grunt-svgmin": "^4.0.0",
     "grunt-usemin": "^3.0.0",
-    "grunt-wiredep": "^2.0.0",
+    "grunt-wiredep": "^3.0.1",
     "jasmine-core": "^2.4.1",
-    "jit-grunt": "^0.9.1",
-    "jshint-stylish": "^1.0.0",
-      "load-grunt-tasks": "~0.2.0",
-    "karma": "^0.13.22",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.8",
+    "jit-grunt": "^0.10.0",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1",
+    "karma": "^1.3.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
+    "load-grunt-tasks": "^3.5.2",
     "phantomjs-prebuilt": "^2.1.7",
-    "time-grunt": "^1.0.0",
-      "grunt-s3": "~0.2.0-alpha.3",
-      "grunt-html-snapshot": "~0.6.1",
-      "grunt-html-snapshots": "~0.3.0",
-      "grunt-sitemap": "~1.2.0"
+    "time-grunt": "^1.4.0"
   },
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
     "test": "karma start test/karma.conf.js"
-  }
+  },
+  "description": "This project is generated with [yo angular generator](https://github.com/yeoman/generator-angular)\r version 0.15.1.",
+  "main": "Gruntfile.js",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "angular-ui-bootstrap": "^2.3.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pwinter303/cs1.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/pwinter303/cs1/issues"
+  },
+  "homepage": "https://github.com/pwinter303/cs1#readme"
 }
