--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-google-maps": "~2.3.2",
     "angular-odometer": "~0.0.10",
     "ng-dialog": "~0.6.0",
-    "angular-smart-table": "^2.1.8"
+    "angular-smart-table": "^2.1.8",
+    "satellizer": "^0.15.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0",
@@ -30,5 +31,8 @@
         "dist/js/bootstrap.js"
       ]
     }
+  },
+  "resolutions": {
+    "angular-google-maps": "^2.4.1"
   }
 }
